Add kaniko service account to helm chart

--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -45,6 +45,11 @@ merlin:
     apiHost: http://feast-core.mlp:8080/v1
 
   imageBuilder:
+    serviceAccount:
+      create: true
+      name: "kaniko-sa"
+      annotations: {}
+      labels: {}
     clusterName: "dev"
     baseImages:
       3.7.*:
@@ -68,7 +73,6 @@ merlin:
     tolerations: []
     nodeSelectors: {}
     maxRetry: 3
-    serviceAccount: ""
     k8sConfig: ""
 
   gitlab:
