--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -151,8 +151,10 @@ spec:
           {{- if .Values.merlin.imageBuilder.contextSubPath }}
           - name: IMG_BUILDER_CONTEXT_SUB_PATH
             value: "{{ .Values.merlin.imageBuilder.contextSubPath }}"
+          {{- end }}
+          {{- if .Values.merlin.imageBuilder.serviceAccount.name }}
           - name: IMG_BUILDER_KANIKO_SERVICE_ACCOUNT
-            value: "{{ .Values.merlin.imageBuilder.serviceAccount }}"
+            value: "{{ .Values.merlin.imageBuilder.serviceAccount.name }}"
           {{- end }}
           {{- if .Values.merlin.imageBuilder.predictionJobContextSubPath }}
           - name: IMG_BUILDER_PREDICTION_JOB_CONTEXT_SUB_PATH
