--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -74,7 +74,7 @@ merlin:
         dockerfilePath: "docker/app.Dockerfile"
         buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.19.0"
         mainAppPath: /merlin-spark-app/main.py
-    resourceRequestsLimits:
+    resources:
       requests:
         cpu: 1
         memory: 512Mi
