Support resource configuration for imagebuilder (#351)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->

**What this PR does / why we need it**:
<!-- Explain here the context and why you're making the change. What is
the problem you're trying to solve. --->

Currently, Merlin image building jobs don't support resource
configuration, and requests.cpu is hardcoded. Without requests.memory
configured on them, it's common to see jobs failing with OOMKilled error
if multiple jobs are running concurrently. This PR supports resource
configuration so that some reasonable amount of memory can be set to
mitigate this issue. In addition, the GKE autoscaler can spin up another
node if multiple jobs are running concurrently, instead of placing all
of the jobs onto the same node, and causing them to fight for available
memory.

**Which issue(s) this PR fixes**:
<!--
*Automatically closes linked issue when PR is merged.
Usage: `Fixes #<issue number>`, or `Fixes (paste link of issue)`.
-->

Fixes #

**Does this PR introduce a user-facing change?**:
<!--
If no, just write "NONE" in the release-note block below.
If yes, a release note is required. Enter your extended release note in
the block below.
If the PR requires additional action from users switching to the new
release, include the string "action required".

For more information about release notes, see kubernetes' guide here:
http://git.k8s.io/community/contributors/guide/release-notes.md
-->

```release-note
NONE
```

**Checklist**

- [x] Added unit test, integration, and/or e2e tests

--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -132,6 +132,8 @@ spec:
             value: "{{ .Values.merlin.imageBuilder.timeout }}"
           - name: IMG_BUILDER_KANIKO_IMAGE
             value: "{{ .Values.merlin.imageBuilder.kanikoImage }}"
+          - name: IMG_BUILDER_RESOURCES
+            value: {{ .Values.merlin.imageBuilder.resources | toJson | quote }}
           - name: IMG_BUILDER_TOLERATIONS
             value: {{ .Values.merlin.imageBuilder.tolerations | toJson | quote }}
           - name: IMG_BUILDER_NODE_SELECTORS
