Set kaniko sa name based on create boolean

--- a/charts/merlin/templates/kaniko-service-account.yaml
+++ b/charts/merlin/templates/kaniko-service-account.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.merlin.imageBuilder.serviceAccount.name }}
+  name: {{ template "merlin.kaniko-sa" . }}
   namespace: {{ .Release.Namespace }}
   {{- if .Values.merlin.imageBuilder.serviceAccount.annotations }}
   annotations:
