--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -156,7 +156,7 @@ spec:
           {{- end }}
           {{- if .Values.merlin.imageBuilder.serviceAccount.name }}
           - name: IMG_BUILDER_KANIKO_SERVICE_ACCOUNT
-            value: "{{ .Values.merlin.imageBuilder.serviceAccount.name }}"
+            value: "{{ template "merlin.kaniko-sa" . }}"
           {{- end }}
           {{- if .Values.merlin.imageBuilder.predictionJobContextSubPath }}
           - name: IMG_BUILDER_PREDICTION_JOB_CONTEXT_SUB_PATH
