--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -66,10 +66,10 @@ merlin:
     kanikoImage: "gcr.io/kaniko-project/executor:v1.6.0"
     resources:
       requests:
-        cpu: 1
+        cpu: "1"
         memory: 256Mi
       limits:
-        cpu: 1
+        cpu: "1"
         memory: 512Mi
     retention: "48h"
     tolerations: []
