Specify service account for kaniko jobs (#352)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->

**What this PR does / why we need it**:
This PR adds the option to set the service account for kaniko jobs using
the `IMG_BUILDER_KANIKO_SERVICE_ACCOUNT` environment variable. If this
environment variable is empty, the existing behaviour will be used (ie
mounting of K8s secret containing Google service account key into the
pod).

The helm chart has been modified to create the Kaniko job K8s SA if
needed. Else, the K8s SA can be created externally and specified in the
helm chart values for merlin to use.

Previously, all kaniko jobs will have:
1) K8s secret mounted into pod
2) `GOOGLE_APPLICATION_CREDENTIALS` env var set
3) Dockerfile will run `gcloud auth activate-service-account` command

When this environment variable is set, the K8s kaniko image builder jobs
(prediction and batch) will use the specified K8s service account, and
not mount the K8s secret as part of the job's PodSpec.

The dockerfile used by batch-prediction and pyfunc-server is modified to
run `gcloud auth activate-service-account` command only if
`GOOGLE_APPLICATION_CREDENTIALS` argument is set.

**Which issue(s) this PR fixes**:
<!--
*Automatically closes linked issue when PR is merged.
Usage: `Fixes #<issue number>`, or `Fixes (paste link of issue)`.
-->

Fixes #

**Does this PR introduce a user-facing change?**:
<!--
If no, just write "NONE" in the release-note block below.
If yes, a release note is required. Enter your extended release note in
the block below.
If the PR requires additional action from users switching to the new
release, include the string "action required".

For more information about release notes, see kubernetes' guide here:


--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -154,6 +154,10 @@ spec:
           - name: IMG_BUILDER_CONTEXT_SUB_PATH
             value: "{{ .Values.merlin.imageBuilder.contextSubPath }}"
           {{- end }}
+          {{- if .Values.merlin.imageBuilder.serviceAccount.name }}
+          - name: IMG_BUILDER_KANIKO_SERVICE_ACCOUNT
+            value: "{{ template "merlin.kaniko-sa" . }}"
+          {{- end }}
           {{- if .Values.merlin.imageBuilder.predictionJobContextSubPath }}
           - name: IMG_BUILDER_PREDICTION_JOB_CONTEXT_SUB_PATH
             value: "{{ .Values.merlin.imageBuilder.predictionJobContextSubPath }}"
