--- a/python/pyfunc-server/examples/iris-model/env.yaml
+++ b/python/pyfunc-server/examples/iris-model/env.yaml
@@ -1,8 +1,9 @@
 dependencies:
-  - python=3.7.11
+  - python=3.7.*
   - pip
   - pip:
       - joblib==1.1.1
+      - mlflow==1.23.0
       - numpy==1.21.6
       - scikit-learn==1.0.2
       - xgboost==1.6.2
