Pin MLflow version to 1.23.0

--- a/python/sdk/test/batch/model/env.yaml
+++ b/python/sdk/test/batch/model/env.yaml
@@ -1,6 +1,6 @@
 dependencies:
   - pip:
-      - mlflow==1.23.0
+      - mlflow
       - scikit-learn==1.0.2  # >=1.1.2 upon python 3.7 deprecation
       - joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
       - numpy>=1.19.5,<1.23.4 # https://github.com/Azure/MachineLearningNotebooks/issues/1314
