Print message when error publishing to kafka

--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -1,13 +1,15 @@
 LOG_LEVEL=DEBUG
 
-#STANDARD_TRANSFORMER_CONFIG={"transformerConfig":{"preprocess":{"inputs":[{"variables":[{"name":"customer_id","jsonPath":"$$.customer.id"}]},{"tables":[{"name":"driver_table","baseTable":{"fromJson":{"jsonPath":"$$.drivers[*]","addRowNumber":true}}}]},{"feast":[{"project":"merlin","entities":[{"name":"merlin_test_driver_id","valueType":"STRING","jsonPath":"$$.drivers[*].id"}],"features":[{"name":"merlin_test_redis_driver_features:completion_rate","valueType":"DOUBLE","defaultValue":"0.0"},{"name":"merlin_test_redis_driver_features:cancellation_rate","valueType":"DOUBLE","defaultValue":"0.0"}],"tableName":"driver_redis_feature_table","source":"REDIS"},{"project":"merlin","entities":[{"name":"merlin_test_driver_id","valueType":"STRING","jsonPath":"$$.drivers[*].id"}],"features":[{"name":"merlin_test_bt_driver_features:rating","valueType":"DOUBLE","defaultValue":"0.0"}],"tableName":"driver_bigtable_feature_table","source":"BIGTABLE"}]}],"transformations":[{"tableTransformation":{"inputTable":"driver_table","outputTable":"driver_table","steps":[{"sort":[{"column":"row_number","order":"DESC"}]},{"renameColumns":{"id":"merlin_test_driver_id","row_number":"rank"}},{"updateColumns":[{"column":"customer_id","expression":"customer_id"}]},{"selectColumns":["customer_id","merlin_test_driver_id","rank"]}]}},{"tableJoin":{"leftTable":"driver_table","rightTable":"driver_redis_feature_table","outputTable":"result_table","how":"LEFT","onColumns":["merlin_test_driver_id"]}},{"tableJoin":{"leftTable":"result_table","rightTable":"driver_bigtable_feature_table","outputTable":"result_table","how":"LEFT","onColumns":["merlin_test_driver_id"]}},{"tableTransformation":{"inputTable":"result_table","outputTable":"result_table","steps":[{"sort":[{"column":"rank"}]},{"renameColumns":{"merlin_test_driver_id":"driver_id"}},{"selectColumns":["rank","driver_id","customer_id","merlin_test_redis_driver_features:completion_rate","merlin_test_redis_driver_features:cancellation_rate","merlin_test_bt_driver_features:rating"]}]}}],"outputs":[{"jsonOutput":{"jsonTemplate":{"fields":[{"fieldName":"instances","fromTable":{"tableName":"result_table","format":"SPLIT"}}]}}}]},"postprocess":{}}}
-STANDARD_TRANSFORMER_CONFIG={"transformerConfig":{}}
+STANDARD_TRANSFORMER_CONFIG={"transformerConfig":{},"predictionLogConfig":{"enable":true}}
 CARAML_MODEL_FULL_NAME=echo
+CARAML_MODEL_NAME=echo
+CARAML_MODEL_VERSION=1
+CARAML_PROJECT=sample
 CARAML_HTTP_PORT=8081
 CARAML_GRPC_PORT=9000
 MODEL_HYSTRIX_RETRY_COUNT=0
 CARAML_PROTOCOL=UPI_V1
-CARAML_PREDICTOR_HOST=localhost:9091
+CARAML_PREDICTOR_HOST=localhost:9090
 
 DEFAULT_FEAST_SERVING_URL=localhost:6566
 FEAST_SERVING_URLS=localhost:6566,localhost:6567
@@ -20,6 +22,8 @@ FEAST_HYSTRIX_RETRY_COUNT=5
 FEAST_SERVING_KEEP_ALIVE_ENABLED=true
 FEAST_SERVING_KEEP_ALIVE_TIME=2m
 FEAST_SERVING_KEEP_ALIVE_TIMEOUT=1s
+KAFKA_BROKERS=kafka-brokers:8888
+KAFKA_TOPIC=topic
 
 HTTP_SERVER_TIMEOUT=30s
 HTTP_CLIENT_TIMEOUT=15s
@@ -33,4 +37,4 @@ JAEGER_DISABLED=false
 CACHE_SIZE_IN_MB=100
 FEAST_FEATURE_TABLE_SPECS_JSONS=[{"name":"merlin_test_redis_driver_features","project":"merlin","maxAge":"0s"},{"name":"merlin_test_bt_driver_features","project":"merlin","maxAge":"0s"}]
 DEFAULT_FEAST_SOURCE=BIGTABLE
-FEAST_STORAGE_CONFIGS={"1":{"servingType":"DIRECT_STORAGE","redisCluster":{"feastServingUrl":"feast-redis.dev","redisAddress":["10.12.12.13:6379","10.12.12.14:6379"],"option":{"readTimeout":"1s","writeTimeout":"1s","poolSize":5}}},"2":{"servingType": "DIRECT_STORAGE","bigtable":{"feastServingUrl":"feast-bt.dev","project":"gcp-project","instance":"feast","option":{"grpcConnectionPool":2,"keepAliveInterval":"60s","keepAliveTimeout":"15s"}}}}
+FEAST_STORAGE_CONFIGS={"1":{"servingType":"FEAST_GRPC","redisCluster":{"feastServingUrl":"feast-redis.dev","redisAddress":["10.200.240.60:6379","10.200.240.114:6379","10.200.240.65:6379","10.200.240.95:6379","10.200.240.107:6379","10.200.240.49:6379"],"option":{"readTimeout":"1s","writeTimeout":"1s","poolSize":5,"idleTimeout":"15s","idleCheckFrequency":"45s"}}},"2":{"servingType": "FEAST_GRPC","bigtable":{"feastServingUrl":"online-serving-bigtable.s.ng.feast.golabs.io:15010","project":"gods-staging","instance":"feast-storage","option":{"grpcConnectionPool":2,"keepAliveInterval":"60s","keepAliveTimeout":"15s"}}}}
