Change default of keep alive enabled to false for model and feast gRPC

--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -150,15 +150,14 @@ merlin:
       #   pool_size: 5
       #   keep_alive_interval: "2m"
       #   keep_alive_timeout: "1m"
-
       defaultFeastSource: BIGTABLE
       bigtableCredential:
       coreURL: core.feast.dev
       coreAuthAudience: core.feast.dev
       authEnabled: false
       grpc:
-        keepAliveEnabled: true
-        keepAliveTime: 30s
+        keepAliveEnabled: false
+        keepAliveTime: 60s
         keepAliveTimeout: 5s
     image: merlin-transformer:1.0.0
     jaeger:
@@ -169,8 +168,8 @@ merlin:
       disabled: false
     model:
       grpc:
-        keepAliveEnabled: true
-        keepAliveTime: 30s
+        keepAliveEnabled: false
+        keepAliveTime: 60s
         keepAliveTimeout: 5s
 
   # Google service account used to access GCP's resources.
