Add gRPC client keep alive (#349)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->

**What this PR does / why we need it**:
We faced issue once the connection to feast is not gracefully
terminated, the transformer pod still calling using old connection,
hence the feast retrieval error raise. One approach to mitigate this is
by adding gRPC keep alive to check whether the connection still valid.
**Which issue(s) this PR fixes**:
<!--
*Automatically closes linked issue when PR is merged.
Usage: `Fixes #<issue number>`, or `Fixes (paste link of issue)`.
-->

Fixes #

**Does this PR introduce a user-facing change?**:
<!--
If no, just write "NONE" in the release-note block below.
If yes, a release note is required. Enter your extended release note in
the block below.
If the PR requires additional action from users switching to the new
release, include the string "action required".

For more information about release notes, see kubernetes' guide here:
http://git.k8s.io/community/contributors/guide/release-notes.md
-->

```release-note
NONE
```

**Checklist**

- [ ] Added unit test, integration, and/or e2e tests
- [ ] Tested locally
- [ ] Updated documentation
- [ ] Update Swagger spec if the PR introduce API changes
- [ ] Regenerated Golang and Python client if the PR introduce API
changes

--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -30,6 +30,7 @@ merlin:
 
   environment: dev
   deploymentLabelPrefix: "gojek.com/"
+  pyfuncGRPCOptions : "{}"
 
   loggerDestinationURL: "http://yourDestinationLogger"
 
@@ -149,12 +150,15 @@ merlin:
       #   pool_size: 5
       #   keep_alive_interval: "2m"
       #   keep_alive_timeout: "1m"
-
       defaultFeastSource: BIGTABLE
       bigtableCredential:
       coreURL: core.feast.dev
       coreAuthAudience: core.feast.dev
       authEnabled: false
+      grpc:
+        keepAliveEnabled: false
+        keepAliveTime: 60s
+        keepAliveTimeout: 5s
     image: merlin-transformer:1.0.0
     jaeger:
       agentHost: localhost
@@ -162,6 +166,11 @@ merlin:
       samplerType: const
       samplerParam: 1
       disabled: false
+    model:
+      grpc:
+        keepAliveEnabled: false
+        keepAliveTime: 60s
+        keepAliveTimeout: 5s
 
   # Google service account used to access GCP's resources.
   #
