--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -10,7 +10,7 @@ on:
 env:
   ARTIFACT_RETENTION_DAYS: 7
   DOCKER_BUILDKIT: 1
-  GO_VERSION: 1.18
+  GO_VERSION: '1.20'
 
 jobs:
   create-version:
@@ -146,7 +146,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           # Ensure the same version as the one defined in Makefile
-          version: v1.49
+          version: v1.51.2
           working-directory: api
 
   test-api:
