--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -334,6 +334,28 @@ jobs:
           path: merlin-transformer.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
+  build-inference-logger:
+    runs-on: ubuntu-latest
+    needs:
+      - create-version
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - name: Build Inference Logger
+        run: make build-inference-logger
+      - name: Build Inference Logger Docker
+        run: docker build -t merlin-logger:${{ needs.create-version.outputs.version }} -f inference-logger.Dockerfile .
+      - name: Save Inference Logger Docker
+        run: docker image save --output merlin-logger.${{ needs.create-version.outputs.version }}.tar merlin-logger:${{ needs.create-version.outputs.version }}
+      - name: Publish Inference Logger Docker Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: merlin-logger.${{ needs.create-version.outputs.version }}.tar
+          path: merlin-logger.${{ needs.create-version.outputs.version }}.tar
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+
   e2e-test:
     runs-on: ubuntu-latest
     needs:
