--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -289,6 +289,8 @@ spec:
           - name: GOOGLE_APPLICATION_CREDENTIALS
             value: /etc/gcp_service_account/service-account.json
           {{- end }}
+          - name: IMG_BUILDER_JOB_SAFE_TO_EVICT
+            value: "{{ .Values.merlin.imageBuilder.jobSafeToEvict }}"
         volumeMounts:
         - mountPath: /opt/config
           name: config
