--- a/scripts/e2e/config/kserve/overlay.yaml
+++ b/scripts/e2e/config/kserve/overlay.yaml
@@ -7,18 +7,17 @@ spec:
   template:
     spec:
       containers:
-      - name: manager
-        image: kserve/kserve-controller:v0.9.0
-        resources:
-          limits:
-            cpu: 1
-            memory: 300Mi
-          requests:
-            cpu: 100m
-            memory: 64Mi
+        - name: manager
+          image: kserve/kserve-controller:v0.9.0
+          resources:
+            limits:
+              cpu: ~
+              memory: 300Mi
+            requests:
+              cpu: 100m
+              memory: 64Mi
 
 ---
-
 apiVersion: v1
 kind: ConfigMap
 metadata:
