--- a/scripts/e2e/config/kserve/overlay.yaml
+++ b/scripts/e2e/config/kserve/overlay.yaml
@@ -3,12 +3,18 @@ kind: StatefulSet
 metadata:
   name: kserve-controller-manager
   namespace: kserve
+$patch: delete
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: kserve-controller-manager
+  namespace: kserve
 spec:
   template:
     spec:
       containers:
         - name: manager
-          image: kserve/kserve-controller:v0.9.0
           resources:
             limits:
               cpu: ~
@@ -16,7 +22,6 @@ spec:
             requests:
               cpu: 100m
               memory: 64Mi
-
 ---
 apiVersion: v1
 kind: ConfigMap
